# genome

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: dna.rs  gene.rs  lib.rs  main.rs  utils.rs
src/dna/: mod.rs
src/gene/: marker.rs  mod.rs  mutation.rs
